@@ -24,19 +24,20 @@ class ThreadTest : public CppUnit::TestFixture {
     CPPUNIT_TEST(testThreadKillableWhenWaiting);
     CPPUNIT_TEST_SUITE_END();
 
-    private:
+    public:
         // this is our test implementation of the abstract base class Thread which we will use to test class Thread
-        class DummyThread : public Thread {
+        class DummyThread : public LinuxSampler::Thread {
             public:
                 bool wasRunning; // this variable is false on startup and will be switched to true by the thread, so we can check if the thread actually runs
-                int  someVariable; // we constantly set this variable to -1 in the DummyThread Main() loop, so we can check in our main test thread if the DummyThread is still running by changing that value to something else than -1
+                volatile int someVariable; // we constantly set this variable to -1 in the DummyThread Main() loop, so we can check in our main test thread if the DummyThread is still running by changing that value to something else than -1
 
                 DummyThread();
                 int Main();
-        } dummythread;
+        };
 
+    private:
         // this is only a helper thread to avoid that the entire test case run hangs when we try to stop the dummy thread
-        class HelperThread : public Thread {
+        class HelperThread : public LinuxSampler::Thread {
             private:
                 DummyThread* pDummyThread;
             public:
@@ -48,12 +49,12 @@ class ThreadTest : public CppUnit::TestFixture {
         };
 
         // this simulates a thread that is waiting for a condition (thus sleeping til then)
-        class WaitingThread : public Thread {
+        class WaitingThread : public LinuxSampler::Thread {
             public:
                 WaitingThread();
                 int Main();
             private:
-                Condition condition;
+                LinuxSampler::Condition condition;
         };
     public:
         void setUp() {
